--- a/style.scss
+++ b/style.scss
@@ -4,12 +4,13 @@
 // Popins: light-300, regular - 400, medium - 500, semiBold - 600, bold - 700
 // Merriweather: bold - 700
 $font-popins: 'Poppins', sans-serif;
-$font-merriweather: 'Merriweather', serif;;
+$font-merriweather: 'Merriweather', serif;
 *{
     box-sizing: border-box;
 }
 @import "./header.scss";
 @import "./main.scss";
+@import "./footer.scss";
 body{
     margin: 0;
     min-width: 1116px;
